# fontc

.github/workflows/: python.yml
fontbe/src/: colr.rs  layer_list.rs  lib.rs
fontc/src/: args.rs  lib.rs
fontir/src/: ir.rs  orchestration.rs
glyphs-reader/src/: font.rs
glyphs2fontir/src/: source.rs
resources/testdata/glyphs3/: COLRv1-layer-reuse-actual.glyphs  COLRv1-layer-reuse.glyphs
ttx_diff/: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
ttx_diff/src/ttx_diff/: __init__.py  cli.py  core.py
ttx_diff/tests/: __init__.py  conftest.py  test_cli.py
ufo2fontir/src/: source.rs
